# binary_serializer

./: Cargo.toml  README.md
benches/: benchmark.rs
binary_serializer/: Cargo.toml
binary_serializer/src/: common.rs  decoder.rs  encoder.rs  lib.rs
binary_serializer/tests/: derive.rs  enum_derive.rs  structs_derive.rs
binary_serializer_derive/: Cargo.toml
binary_serializer_derive/src/: lib.rs
src/: common.rs  decoder.rs  encoder.rs  lib.rs
src/v1/: common.rs  decoder.rs  encoder.rs
src/v2/: common.rs  decoder.rs  encoder.rs  mod.rs
