[package]
name = "binary_serializer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3.5"

[[bench]]
name = "benchmark"
harness = false

[features]
default = ["v2"]
v2 = []
exclude_v1 = []