[package]
name = "binary_serializer_derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { version = "1.0.32", default-features = false }
syn = { version = "1.0.81", features = ["extra-traits"] }
quote = "1.0.10"
lazy_static = "1.4.0"
